# koi-net

./: .gitignore  LICENSE  README.md  client_node.py  event.md  koi-net-protocol-openapi.json  koi_net.py  new_partial_node.py  partial_node.py  provider_node.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
coordinator/: __main__.py  config.py  core.py  event_handler.py  handlers.py  network_adapter.py  network_interface.py  network_models.py  network_state.py  processor.py  routes.py  server.py  setup.py
coordinator/network/: adapter.py  interface.py  models.py  state.py
examples/: basic_coordinator_node.py  basic_partial_node.py  full_node.py  full_node_template.py  partial_node.py  partial_node_template.py
prototypes/: client_node.py  new_partial_node.py  partial_node.py  provider_node.py
prototypes/consumer/: __main__.py  config.py  core.py  event_handler.py  network_interface.py  routes.py  setup.py
src/koi_net/: __init__.py  config.py  core.py  identity.py  models.py  reference.py  rid_types.py
src/koi_net/network/: __init__.py  adapter.py  graph.py  interface.py  request_handler.py  response_handler.py  state.py
src/koi_net/processor/: __init__.py  default_handlers.py  handler.py  handlers.py  interface.py  knowledge_object.py
src/koi_net/protocol/: __init__.py  api_models.py  consts.py  edge.py  event.py  helpers.py  node.py
