[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koi-net"
version = "1.0.0-beta.13"
description = "Implementation of KOI-net protocol in Python"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "rid-lib>=3.2.1",
    "networkx>=3.4.2",
    "httpx>=0.28.1",
    "pydantic>=2.10.6"
]

[project.optional-dependencies]
dev = ["twine>=6.0", "build"]
examples = [
    "rich",
    "fastapi",
    "uvicorn"
]

[project.urls]
Homepage = "https://github.com/BlockScience/koi-net/"